// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CheckboxesWidget inline 1`] = `
<div
  className="flex flex-row gap-4 flex-wrap"
>
  <div
    className="flex items-center gap-2"
  >
    <button
      aria-checked={false}
      aria-describedby="_id__error _id__description _id__help"
      aria-required={true}
      autoFocus={true}
      className="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
      data-disabled=""
      data-slot="checkbox"
      data-state="unchecked"
      disabled={true}
      id="_id-0"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      type="button"
      value="on"
    />
    <input
      aria-hidden={true}
      defaultChecked={false}
      disabled={true}
      name="_id"
      required={true}
      style={
        {
          "margin": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "transform": "translateX(-100%)",
        }
      }
      tabIndex={-1}
      type="checkbox"
      value="on"
    />
    <label
      className="flex items-center gap-2 text-sm font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 leading-tight"
      data-slot="label"
      htmlFor="_id-0"
      onMouseDown={[Function]}
    >
      A
    </label>
  </div>
</div>
`;

exports[`CheckboxesWidget simple 1`] = `
<div
  className="flex flex-col gap-2"
>
  <div
    className="flex items-center gap-2"
  >
    <button
      aria-checked={false}
      aria-describedby="_id__error _id__description _id__help"
      aria-required={true}
      autoFocus={true}
      className="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
      data-disabled=""
      data-slot="checkbox"
      data-state="unchecked"
      disabled={true}
      id="_id-0"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="checkbox"
      type="button"
      value="on"
    />
    <input
      aria-hidden={true}
      defaultChecked={false}
      disabled={true}
      name="_id"
      required={true}
      style={
        {
          "margin": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "transform": "translateX(-100%)",
        }
      }
      tabIndex={-1}
      type="checkbox"
      value="on"
    />
    <label
      className="flex items-center gap-2 text-sm font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 leading-tight"
      data-slot="label"
      htmlFor="_id-0"
      onMouseDown={[Function]}
    >
      A
    </label>
  </div>
</div>
`;
